# wolf-lang

./: Cargo.toml  README.md  ROADMAP.md  a.wolf  buildall.sh  func.wolf  t2.wolf  test.wl  test.wolf  try.wolf
examples/: bubble_sort.wolf  fizz_buzz.wolf  function.wolf  import_test.wolf  lists.wolf  math.wolf  notepad.wolf  test.wolf  tests.wolf  text_game.wolf  types.wolf  vector2.wolf
runner/: test.wolf  wolf
src/: ast.rs  error_handler.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  native_functions.rs  parser.rs  tokens.rs
src/stdlib/: input.rs
tests/: stress_recursion.wolf  stress_scope.wolf  stress_syntax.wolf
