[package]
name = "wolflang"
version = "0.1.0"
edition = "2024"

[lib]
name = "wolflang"
path = "src/lib.rs"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[[bin]]
name = "wolflang"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

